k8s/db-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-bridge-service
  namespace: eco-prod # Injected straight into your web application's namespace
spec:
  type: ExternalName
  externalName: mariadb-service.default.svc.cluster.local
